# led-cube

./: CMakeLists.txt  Makefile  README  default.nix  ti-clpru.nix
applications/: CMakeLists.txt
applications/controller-testing/: CMakeLists.txt  main.cpp
applications/cube-test/: CMakeLists.txt  main.cpp
applications/demo/: CMakeLists.txt  main.cpp  objects.cpp  pong.cpp
applications/demo/resources/: cube.map
applications/led-testing/: CMakeLists.txt  main.cpp
applications/slice/: CMakeLists.txt  main.cpp
applications/slice/resources/: cube-100x100.map  cube.map
controller/: CMakeLists.txt  Makefile  main.c
controller/src/controller/: CMakeLists.txt  joystick.c  joystick.h
displayer/: CMakeLists.txt
displayer(alternate)/: Makefile  ReadMe
displayer(alternate)/binary/: config_pins.sh  led-testing
displayer(alternate)/led-cube-cmake/: README
displayer(alternate)/led-cube-cmake/applications/: CMakeLists.txt
displayer(alternate)/led-cube-cmake/renderer/: CMakeLists.txt
displayer(alternate)/pru/: am335x_pru_modified.cmd  led_pru.c  led_pru.elf  led_pru.h  pru.map
displayer/src/: CMakeLists.txt
displayer/src/displayer/: CMakeLists.txt  color.h  displayer.h  ledscape.c  ledscape.h  pru.c  pru.h  util.c  util.h
displayer/src/interface/: CMakeLists.txt  Cargo.toml  pru_module.h  test.rs
displayer/src/interface/src/: pru_module.rs
led-cube/: CMakeCache.txt  Makefile  cmake_install.cmake
led-cube-cmake/: CMakeLists.txt
led-cube-cmake/applications/led-testing/: CMakeLists.txt  main.cpp
led-cube/applications/: Makefile  cmake_install.cmake
led-cube/applications/led-testing/: Makefile  cmake_install.cmake
led-cube/applications/slice/: Makefile  cmake_install.cmake
led-cube/displayer/: Makefile  cmake_install.cmake
led-cube/displayer/src/: Makefile  cmake_install.cmake
led-cube/renderer/: Makefile  cmake_install.cmake
pru/: Makefile  Makefile2  a.out  am335x_pru_imem.cmd  am335x_pru_modified.cmd  led_pru.aux  led_pru.c  led_pru.elf  led_pru.h  pru.map
pru/pru_driver/: Makefile  default.nix  led_pru.c  led_pru.h
pru/pru_interface/: Cargo.toml  Makefile  default.nix
renderer/: CMakeLists.txt
renderer/src/: CMakeLists.txt
renderer/src/file/: CMakeLists.txt  mapParser.h  objParser.h  objReader.h
renderer/src/geometry/: CMakeLists.txt  transformation.h  vector3.h  vertex.h
renderer/src/renderer/: CMakeLists.txt  entity.h  interpolator.h  ledLayout.h  mesh.h  pointCloud.h  renderer.h
(+47 files in other folders)
